--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -792,9 +792,9 @@ spinbutton:not(.vertical) {
     min-width: 24px;
     padding: 0;
     border: solid 6px transparent; }
-    spinbutton:not(.vertical) button.up {
+    spinbutton:not(.vertical) button.up:dir(ltr), spinbutton:not(.vertical) button.down:dir(rtl) {
       margin-left: -3px; }
-    spinbutton:not(.vertical) button.down {
+    spinbutton:not(.vertical) button.up:dir(rtl), spinbutton:not(.vertical) button.down:dir(ltr) {
       margin-right: -3px; }
 spinbutton.vertical:disabled {
   color: rgba(255, 255, 255, 0.4); }
